fixed username p tag in header

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
       <h2 class="sub-title">mobile</h2>
     </div>
     {{#if loggedIn}}
-      <h2 class="sub-title">{{{username}}}</h2>
+      <p class="username">{{username}}</p>
     {{else}}
     <a class="user w-inline-block" href="login">
       <img alt="user setting logo" class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
