--- a/views/css/vbamobile.css
+++ b/views/css/vbamobile.css
@@ -12,6 +12,7 @@ body {
 }
 
 .body {
+  max-height: 100%;
   min-height: 100%;
   background-color: #bac2ca;
   font-family: Roboto, sans-serif;
@@ -140,16 +141,15 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  min-height: 100%;
+  min-height: 90vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -165,8 +165,6 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 5%;
-  margin-bottom: 5%;
   padding: 5%;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -246,13 +244,9 @@ body {
 .form {
   margin-top: 2rem;
   margin-right: 0px;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
 }
 
 .form-container {
@@ -300,24 +294,23 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 25%;
-  margin-top: 5%;
+  width: 50%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .login-form {
@@ -325,7 +318,7 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 20%;
+  margin-top: 5%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -389,11 +382,11 @@ body {
 }
 
 @media (max-width: 767px) {
+  .body {
+    max-height: 100%;
+  }
   .projects-button {
     padding: 4%;
-  }
-  .form {
-    width: 50%;
   }
   .button-container {
     width: 45%;
@@ -487,7 +480,6 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    min-height: 10vh;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
@@ -628,19 +620,14 @@ body {
     font-family: Roboto, sans-serif;
     letter-spacing: 5px;
   }
-  .form {
-    width: 75%;
-  }
   .form-header {
     font-size: 28px;
   }
   .button-container {
     width: 75%;
-    margin-top: 25%;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
   }
   .login-title {
     font-size: 1.5rem;
