fixed links on index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,12 +13,12 @@
 </header>
 <main class="content-wrapper">
   <div class="button-container">
-    <a class="projects-button w-inline-block" href="#">
+    <a class="projects-button w-inline-block" href="/newproject">
       <img alt="new project button logo" class="project-button-logo" height="56" src="images/addButtonBlue.svg" width="56">
       <div class="project-button-text">NEW
         <br>PROJECT</div>
     </a>
-    <a class="projects-button w-inline-block" href="#">
+    <a class="projects-button w-inline-block" href="/projects">
       <img class="project-button-logo" height="56" src="images/clipboardBlue.svg" width="56">
       <div class="project-button-text">PROJECTS</div>
     </a>
