--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -22,15 +22,23 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <header class="header">
-    <div class="titles">
-      <h1 class="title">VBA</h1>
-      <h2 class="sub-title">mobile</h2>
-    </div>
-    <a class="user w-inline-block" href="login.html">
-      <img class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
+<header class="header">
+  <div class="titles">
+    <h1 class="title">VBA</h1>
+    <h2 class="sub-title">mobile</h2>
+  </div>
+  {{#if loggedIn}}
+    <p class="username">{{username}}</p>
+  {{else}}
+    <a class="user w-inline-block" href="login">
+      <img alt="user setting logo" class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
     </a>
-  </header>
+  {{/if}}
+</header>
+
+  {{{body}}}
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/vbamobile.js" type="text/javascript"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
