--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,12 +7,12 @@
 </header> -->
 <main class="content-wrapper">
   <div class="button-container">
-    <a class="projects-button w-inline-block" href="/newproject">
+    <a class="projects-button w-inline-block" href="/project">
       <img alt="new project button logo" class="project-button-logo" src="images/addButtonBlue.svg" width="56">
       <div class="project-button-text">NEW
         <br>PROJECT</div>
     </a>
-    <a class="projects-button w-inline-block" href="#">
+    <a class="projects-button w-inline-block" href="/myproject">
       <img class="project-button-logo" src="images/clipboardBlue.svg">
       <div class="project-button-text">PROJECTS</div>
     </a>
