--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Last Published: Sat Sep 17 2016 04:08:42 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Sep 19 2016 02:15:55 GMT+0000 (UTC) -->
 <html data-wf-page="57da536ca0b21bf9369455e0" data-wf-site="57ced8c91d3807cb6dad5f35">
 <head>
   <meta charset="utf-8">
@@ -22,19 +22,16 @@
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-<header class="header">
-  <div class="titles">
-    <h1 class="title">VBA</h1>
-    <h2 class="sub-title">mobile</h2>
-  </div>
-  {{#if loggedIn}}
-    <p class="username">{{username}}</p>
-  {{else}}
+  <header class="header">
+    <div class="titles">
+      <h1 class="title">VBA</h1>
+      <h2 class="sub-title">mobile</h2>
+    </div>
     <a class="user w-inline-block" href="login">
-      <img alt="user setting logo" class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
+      <img class="user-logo" height="56" src="images/ic_account_box_white_24px.svg" width="56">
     </a>
-  {{/if}}
-</header>
+  </header>
+
 
   {{{body}}}
 
